--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,4 +6,4 @@
 
 *.js                       @Srinivas-hj
 scripts/*.py               @Sowmya-mvs
-exercises/*.md             akshayahon
+exercises/*.md             @akshayahon
