--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,4 +6,4 @@
 
 *.js                       @Srinivas-hj
 scripts/*.py               @Sowmya-mvs
-exercises/*.md             @Sowmya-mvs
+exercises/*.md             @akshayahon
